# PRISM

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  HANDOFF.md  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  playwright.config.ts  start-dev.bat  start-dev.command  start.bat  start.command  wipe-accounts.bat
.claude/: launch.json  settings.json
.wikiwiki/: config.json  site-theme.json
apps/desktop/src-tauri/: Cargo.toml  background-policy.test.ts  installer.nsh  lifecycle-policy.test.ts  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
artifacts/: prism-current-personality-fonts-contact-sheet.html
docs/: app-store-distribution.md  app-store-review.md  applets.md  brand-ethos.md  context-menu-system.md  conversation-history-contract.md  desktop-runtime-layout.md  distribution-model.md  experimental-effort-eval-runbook.md  experimental-effort-research-log.md  git-safeguards.md  licensing-and-brand.md  living-shell-architecture.md  mobile-api-contract.md  native-client-mvp.md  native-quick-launch.md  prism-client-app.md  prism-desktop-app.md  prism-ios-client.md  prism-server-app-windows.md  prism-server-app.md  product-worthy-launch.md  production-readiness-gate.md  release-process.md  review-artifacts.md  slate-continuity-contract.md  slate-master-plan.md  slate-v1-product-ux-contract.md  steam-desktop-release.md  story-v1-backend-contract.md  voices.md  (+7 more)
(+1557 files in other folders)
