[package]
name = "prism_desktop"
version = "0.6.5"
description = "Prism unified desktop shell"
authors = ["Prism"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
